# Local_MCP

./: .env.example  .gitignore  README.md  client.py  pyproject.toml  server.py
