[project]
name = "local-mcp"
version = "0.1.0"
description = "Local MCP Task Tracker (Kanban) server and client (LlamaIndex + Ollama)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.0",
    "llama-index>=0.11.0",
    "llama-index-llms-ollama>=0.2.0",
    "llama-index-tools-mcp>=0.2.0",
    "nest-asyncio>=1.6.0",
]
